...
    }
    
    func addPhollowButton() {
        phollowButton.frame = CGRect(x: 0, y: -screenBounds.width/5, width: screenBounds.width/2, height: screenBounds.width/10)
        phollowButton.setTitleColor(.whiteColor(), forState: .Normal)
        phollowButton.setTitle(" Phollow", forState: .Normal)
        phollowButton.accessibilityLabel = "phollow"
         phollowButton.contentHorizontalAlignment = UIControlContentHorizontalAlignment.Left
    }
    
    func addHelpButton() {
        helpButton.frame = CGRect(x: 0, y: -screenBounds.width*3/10, width: screenBounds.width/2, height: screenBounds.width/10)
        helpButton.setTitleColor(.whiteColor(), forState: .Normal)
...
