...
        passwordField.delegate = self
        passwordField.accessibilityLabel = "password"
        
        submitButton.frame = CGRect(x: screenBounds.width/4, y: screenBounds.height/2, width: screenBounds.width/2, height: 30)
        submitButton.setTitleColor(.whiteColor(), forState: .Normal)
        submitButton.setTitle("Submit", forState: .Normal)
        submitButton.accessibilityLabel = "submit"
        
        loginButton.frame = CGRect(x: screenBounds.width*2/5, y: screenBounds.height*0.45, width: screenBounds.width/5, height: 30)
        loginButton.setTitleColor(.whiteColor(), forState: .Normal)
        loginButton.setTitle("Login", forState: .Normal)
        loginButton.accessibilityLabel = "login"
        
...
